# AI-Assessment-Intelligence-Platform

./: README.md  aligned.db  debug.py  main.py  pyproject.toml  script.py
alembic/: env.py
api/v1/: academic_year_route.py  course_offering_route.py  course_route.py  dep_route.py  exam_route.py  objective_route.py  semister_route.py  topic_route.py
core/: ai_client.py  config.py
crud/: academicyear_crud.py  course_crud.py  course_offering_crud.py  dep_crud.py  objective_crud.py  semister_crud.py  topic_crud.py
db/: base_class.py  session.py
models/: __init__.py  academic_year_model.py  course_model.py  course_offering_model.py  deps_model.py  objective_model.py  semister_model.py  term_model.py  topic_model.py
schema/: course_offering_schema.py  course_schema.py  dep_schema.py  objective_schema.py  topic_schema.py
services/: exam_canonicalizer.py  exam_normalizer_AI.py  pdf_service.py  schema.py  segmentation_service.py  text_normalizer.py
utils/: build_prompt.py  format_question.py  map_questions_to_objectives.py  text_cleaning.py
